# somanyfeeds.py

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
apps/api_server/: __main__.py  app.py  health_routes.py  hello_routes.py
apps/browser_app/: package.json
backend/apps/api_server/: __main__.py  app.py  app_dependencies.py  articles_routes.py  feeds_processor.py  health_routes.py  hello_routes.py  periodic_job_runner.py
backend/pkgs/database_support/: connection_pool.py  database_gateway.py  database_template.py  uuid_generator.py  uuid_v7.py
backend/pkgs/env_support/: environment_settings.py
backend/pkgs/feeds_data/: articles_repository.py  feeds_repository.py
backend/pkgs/feeds_processing/: downloads.py  feed_parser.py  feeds_processor.py  rss.py  rss_parser.py
backend_tests/apps/api_server/: test_articles_routes.py  test_health_routes.py  test_hello_routes.py  testing_app.py  testing_app_dependencies.py
backend_tests/pkgs/database_test_support/: testing_database_template.py  testing_uuid_generator.py
backend_tests/pkgs/feeds_data/: test_articles_repository.py  test_feeds_repository.py
backend_tests/pkgs/feeds_processing/: test_rss_parser.py  testing_feeds_processor.py
backend_tests/pkgs/feeds_test_support/: feeds_resources.py
databases/somanyfeeds_db/: alembic.ini  env.py  pyproject.toml  script.py.mako
deployments/: Dockerfile
deployments/config/: nginx.conf  start.sh
deployments/resources/: nginx.conf  start.sh
frontend/: eslint.config.js  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.test.tsx  App.tsx  main.tsx
pkgs/feeds_processing/: downloads.py  rss.py
(+9 files in other folders)
