[project]
name = "somanyfeeds-py"
version = "0.1.0"
requires-python = "~=3.13.3"
dependencies = [
    "alembic>=1.15.2",
    "dacite>=1.9.2",
    "fastapi>=0.115.12,<2.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "uuid6>=2024.7.10",
    "uvicorn>=0.34.2,<2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<2.0",
    "pydantic-settings>=2.9.1",
    "pyrefly>=0.15.0,<2.0",
    "responses>=0.25.7",
    "ruff>=0.11.9,<2.0",
]

[tool.ruff]
line-length = 120
