[project]
name = "somanyfeeds-py"
version = "0.1.0"
requires-python = ">=3.13.3, <3.14"
dependencies = [
    "dacite>=1.9.2,<2.0",
    "fastapi>=0.115.12,<2.0",
    "psycopg>=3.2.9",
    "psycopg-binary>=3.2.9,<4.0",
    "psycopg-pool>=3.2.6,<4.0",
    "requests>=2.32.3,<3.0",
    "uvicorn>=0.34.2,<2.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<2.0",
    "pyrefly>=0.16.1,<2.0",
    "responses>=0.25.7,<2.0",
    "ruff>=0.11.10,<2.0",
]

[tool.pyrefly]
project_includes = ["backend", "backend_tests"]
python_interpreter = ".venv/bin/python"

[tool.ruff]
line-length = 120
